--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% block title %}{{ app_name }}{% endblock %}</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="DNA preservation and storage kits for funeral homes">
+    <meta name="author" content="Genetic Memorial">
+    <meta name="keywords" content="DNA, Funeral, Genes">
     <meta name="generator" content="Google App Engine Boilerplate 2.2.0-beta rev516 (g9b1f961)">
 
-    <!-- Mobile viewport optimized: h5bp.com/viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
     {% if is_mobile %}
@@ -36,13 +35,9 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
-    <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance. -->
     <script src="/boilerplate/js/libs/modernizr-2.6.1.min.js"></script>
 </head>
 <body>
-    <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-           chromium.org/developers/how-tos/chrome-frame-getting-started -->
     <!--[if lt IE 8]>
     	<p class=chromeframe>{% trans %}Your browser is <em>ancient!</em>{% endtrans %}
     	{% trans %}<a href="http://browsehappy.com/">Upgrade to a different browser</a>
@@ -52,107 +47,43 @@
 
     <div id="page">
         {% block navbar %}
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-chevron-down icon"></span>
-                </button>
-                <a class="brand" href="/">{{ app_name }}</a>
-                <div class="nav-collapse">
-                    <ul class="nav pull-right">
-                        <!-- <li><a href="https://github.com/coto/gae-boilerplate" target="_blank"><span class="icon-inbox" ></span> {% trans %}Source Code{% endtrans %}</a></li>
-                        {% if locale_iso %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                {% trans %}Language{% endtrans %} : {{ locale_language }} <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                            	{% for l in locales %}
-                                {% if str(locale_iso) != l %}<li><a href="{{ path_for_language }}&hl={{ l }}">{{ locales[l] }}</a></li>{% endif %}
-                                {% endfor %}
-                            </ul>
-                        </li>
-                        {% endif %} -->
-                        {% if user_id %}
-                        <li class="divider-vertical"></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@{{ username }} <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ uri_for("edit-profile") }}">{% trans %}Edit Profile{% endtrans %}</a></li>
-                                <li class="divider"></li>
-                                <li><a href="{{ logout_url }}">{% trans %}Logout{% endtrans %}</a></li>
-                            </ul>
-                        </li>
-                        {% elif path != "/" and path != "/login/" %}
-                        <li class="divider-vertical"></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans %}Login{% endtrans %} <b class="caret"></b></a>
-                            <div class="dropdown-menu well">
-                                <form id="form_login_user" action="{{ uri_for("login") }}" method="post" class="auth-at-dropdown">
-                                    <fieldset>
-                                        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}">
-                                        <div class="control-group">
-                                            <label class="control-label" for="l_username">{% trans %}Username or Email{% endtrans %}:</label>
-                                            <div class="controls">
-                                                <input class="input-xlarge focused required" id="l_username" name="username" type="text" value="">
-                                            </div>
-                                        </div>
-                                        <div class="control-group">
-                                            <label class="control-label" for="l_password">{% trans %}Password{% endtrans %}:</label>
-                                            <div class="controls">
-                                                <input class="input-xlarge focused required" id="l_password" name="password" type="password" value="">
-                                            </div>
-                                        </div>
-                                        <div class="control-group row-fluid">
-                                            <label class="checkbox span7">
-                                                <input type="checkbox" name="remember_me" id="remember_me" value="on">
-                                                {% trans %}Remember me?{% endtrans %}
-                                            </label>
-                                            <div class="span5">
-                                                <button type="submit" class="btn btn-primary btn-small btn-login">{% trans %}Login{% endtrans %}</button>
-                                            </div>
-                                        </div>
-                                        <div class="control-group">
-                                            <a href="{{ uri_for("password-reset") }}">{% trans %}Forgot your password?{% endtrans %}</a>
-                                        </div>
-                                        {{ macros.federated_login(provider_info, provider_uris, enable_federated_login) }}
-                                    </fieldset>
-                                </form>
-                            </div>
-                        </li>
-                        {% endif %}
-                    </ul>
-                </div><!-- /.nav-collapse -->
-            </div><!-- /navbar-inner -->
-        </div><!-- /navbar -->
-        {% endblock %}
 
-        <!-- <div id="content" class="container xled"> -->
-            <!-- {% block header %}
-            <header class="navbar" id="overview">
-                {% block header_title_lead %}
-                <h1>{% block header_title %}{{ app_name }}{% endblock %}</h1>
-                <p class="lead">
-		            {% trans %}Congratulations on your Google App Engine Boilerplate powered page.{% endtrans %}
-		            <br><a href="http://github.com/coto/gae-boilerplate/blob/master/README.rdoc" target="_blank">
-		            {% trans %}Learn why this Boilerplate Rocks{% endtrans %}</a> {% trans %}or just{% endtrans %}
-		            <a href="http://github.com/coto/gae-boilerplate/" target="_blank">{% trans %}download the Source Code{% endtrans %}</a>
-		            {% trans %}to help you to create your application.{% endtrans %}
-				</p>
-                {% endblock %}
-                {% block subnavbar %}
-                <div class="subnav">
-                    <ul>
-                        <li{% if path == uri_for("contact") %} class="active"{% endif %}><a href="{{ uri_for("contact") }}">{% trans %}Contact{% endtrans %}</a></li>
-                        {% if not user_id %}
-                        <li{% if path == uri_for("register") %} class="active"{% endif %}><a href="{{ uri_for("register") }}">{% trans %}Sign Up{% endtrans %}</a></li>
-                        <li{% if path == uri_for("password-reset") %} class="active"{% endif %}><a href="{{ uri_for("password-reset") }}">{% trans %}Forgot your password?{% endtrans %}</a></li>
-                        {% endif %}
+        <div class="navbar navbar-fixed-top">
+          <div class="navbar-inner">
+            <div class="container">
+              <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="brand" href="/">
+                <img style="margin: -3px 10px 0px 0px;" src="/img/logo.png" alt=""> {{ app_name }}
+              </a>
+              <div class="nav-collapse collapse">
+                <ul class="nav pull-right">
+                  <li><a href="{{ uri_for("about") }}">About</a></li>
+                  <li><a href="#">Order</a></li>
+                  <li class="active"><a href="#">Company</a></li>
+                  <li class="dropdown open">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Action</a></li>
+                      <li><a href="#">Another action</a></li>
+                      <li><a href="#">Something else here</a></li>
+                      <li class="divider"></li>
+                      <li class="nav-header">Nav header</li>
+                      <li><a href="#">Separated link</a></li>
+                      <li><a href="#">One more separated link</a></li>
                     </ul>
-                </div>
-                {% endblock %}
-            </header>
-            {% endblock %} -->
+                  </li>
+                  <li><a href="/contact">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        {% endblock %}
 
         {% if messages|safe %}
         	{% for message in messages %}
@@ -163,15 +94,15 @@
             {% endfor %}
         {% endif %}
 
-            {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
 
-            {% block footer %}
-            <footer>
-                <p class="pull-right"><a href="#">Back to top</a></p>
-                <p>&copy; {{ app_name }} Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-            </footer>
-            {% endblock %}
-        <!-- </div>/content -->
+        {% block footer %}
+        <hr>
+        <footer>
+            <p class="pull-right"><a href="#">Back to top</a></p>
+            <p>&copy; {{ app_name }} Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        </footer>
+        {% endblock %}
     </div><!-- /page -->
 
     <!-- JavaScript at the bottom for fast page loading -->
