--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container">
       <div class="row-fluid">
         <div class="span3">
           <div class="well sidebar-nav">
