--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                   <li><a href="{{ uri_for("about") }}">About</a></li>
                   <li><a href="#">Order</a></li>
                   <li class="active"><a href="#">Company</a></li>
-                  <li class="dropdown open">
+                  <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                       <li><a href="#">Action</a></li>
