Make one active menu item work

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<div class="content">
+<div class="container">
     <form id="form_contact" action="{{ url|safe }}" method="post" class="well form-horizontal">
         <fieldset>
             <input type="hidden" name="exception" value="{{ exception }}">
