--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,6 @@
 
     <div id="page">
         {% block navbar %}
-
         <div class="navbar navbar-fixed-top">
           <div class="navbar-inner">
             <div class="container">
@@ -61,9 +60,9 @@
               </a>
               <div class="nav-collapse collapse">
                 <ul class="nav pull-right">
-                  <li><a href="{{ uri_for("about") }}">About</a></li>
-                  <li><a href="#">Order</a></li>
-                  <li class="active"><a href="#">Company</a></li>
+                  <li><a href="/">Home</a></li>
+                  <li><a href="/about/">About</a></li>
+                  <li class=""><a href="#">Company</a></li>
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -76,7 +75,7 @@
                       <li><a href="#">One more separated link</a></li>
                     </ul>
                   </li>
-                  <li><a href="/contact">Contact</a></li>
+                  <li><a href="/contact/">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -99,8 +98,10 @@
         {% block footer %}
         <hr>
         <footer>
+            <div class="container">
             <p class="pull-right"><a href="#">Back to top</a></p>
             <p>&copy; {{ app_name }} Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            </div>
         </footer>
         {% endblock %}
     </div><!-- /page -->
