--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="container">
       <div class="row-fluid">
-        <div class="span3">
+        <div class="span3 bcs-docs-sidebar">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
@@ -32,6 +32,8 @@
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
+
+
         <div class="span9">
           <div class="hero-unit">
             <h1>Hello, world!</h1>
@@ -57,7 +59,7 @@
               <p><a class="btn" href="#">View details »</a></p>
             </div><!--/span-->
           </div><!--/row-->
-          '*4}}
+          '*6}}
 
     </div>
 {% endblock %}
