Add working sidebar page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -255,3 +255,33 @@ dt,dd {
       }
 
     }
+
+
+
+    /* FIXED SIDEBAR CSS
+    -------------------------------------------------- */
+
+.sidebar-nav-fixed {
+    padding: 9px 0;
+    position:fixed;
+    left:20px;
+    top:60px;
+    width:270px;
+}
+
+.row-fluid > .span-fixed-sidebar {
+    margin-left: 290px;
+}
+
+ @media (max-width: 767px) {
+     .sidebar-nav-fixed {
+         width:auto;
+     }
+ }
+
+ @media (max-width: 979px) {
+     .sidebar-nav-fixed {
+         position:static;
+        width: auto;
+     }
+ }
