--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,7 @@
 <div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="item">
-      <img src="/img/slideshow/slide-01.jpg" alt="">
+      <img src="img/slide1.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Genetic Memorial.</h1>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="item active left">
-      <img src="/img/slideshow/slide-02.jpg" alt="">
+      <img src="img/slide2.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Our Technology.</h1>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="item next left">
-      <img src="/img/slideshow/slide-03.jpg" alt="">
+      <img src="img/slide3.jpg" alt="">
       <div class="container">
         <div class="carousel-caption">
           <h1>Why A Memorial.</h1>
